# smallidea-cpp

./: .gitignore  CMakeLists-minimal-fitnesse.txt  CMakeLists-minimal-lib.txt  CMakeLists-minimal-spec.txt  CMakeLists.txt  README.md  build-run-acceptance-spec.sh  build-run-coveragereport.sh  build-run-spec.sh  start-fitnesse.sh
acceptance-spec/FitNesseRoot/FooSpecificationSuite/: FooSpecification.wiki
acceptance-spec/fitnesse-fixture/: FooFitnesseFixture.cpp
include/smallidea/: Foo.h
spec/: FooSpec.cpp
src/: Foo.cpp
